Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: custom
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
